add some style and text

--- a/index.html
+++ b/index.html
@@ -3,17 +3,40 @@
 <head>
   <meta charset="UTF-8">
   <title>Paul Chichura</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Welcome to My Website</h1>
+    <img src="images/profile.jpg" alt="My photo" class="profile-pic">
+    <h1>Paul Chichura</h1>
     <p>Physicist • Astronomer • AI Enthusiast</p>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#projects">Projects</a>
+      <a href="#contact">Contact</a>
+    </nav>
   </header>
 
   <main>
-    <h2>About Me</h2>
-    <p>I’m a researcher working at the intersection of astronomy and machine learning.</p>
+    <section id="about">
+      <h2>About Me</h2>
+      <p>I’m a researcher working at the intersection of astronomy and machine learning.</p>
+    </section>
+
+    <section id="projects">
+      <h2>Projects</h2>
+      <ul>
+        <li><a href="https://github.com/your-repo">Asteroid Data Analysis</a></li>
+        <li><a href="https://github.com/your-repo">Black Hole Observations</a></li>
+      </ul>
+    </section>
+
+    <section id="contact">
+      <h2>Contact</h2>
+      <p>Email: <a href="mailto:youremail@example.com">youremail@example.com</a></p>
+      <p><a href="https://github.com/yourusername">GitHub</a> | <a href="https://linkedin.com/in/yourprofile">LinkedIn</a></p>
+    </section>
   </main>
 
   <footer>
