create more pages

--- a/index.html
+++ b/index.html
@@ -12,30 +12,22 @@
     <h1>Paul Chichura</h1>
     <p>Physicist • Astronomer • AI Enthusiast</p>
     <nav>
-      <a href="#about">About</a>
-      <a href="#projects">Projects</a>
-      <a href="#contact">Contact</a>
+      <a href="index.html">Home</a>
+      <a href="research.html">Research</a>
+      <a href="cv.html">CV</a>
+      <a href="publications.html">Publications</a>
+      <a href="projects.html">Projects</a>
     </nav>
   </header>
 
   <main>
-    <section id="about">
-      <h2>About Me</h2>
-      <p>I’m a researcher working at the intersection of astronomy and machine learning.</p>
-    </section>
-
-    <section id="projects">
-      <h2>Projects</h2>
-      <ul>
-        <li><a href="https://github.com/your-repo">Asteroid Data Analysis</a></li>
-        <li><a href="https://github.com/your-repo">Black Hole Observations</a></li>
-      </ul>
-    </section>
+    <h2>Welcome</h2>
+    <p>I’m a researcher working at the intersection of astronomy and machine learning. Explore my research, publications, and projects to learn more.</p>
 
     <section id="contact">
       <h2>Contact</h2>
-      <p>Email: <a href="mailto:youremail@example.com">youremail@example.com</a></p>
-      <p><a href="https://github.com/yourusername">GitHub</a> | <a href="https://linkedin.com/in/yourprofile">LinkedIn</a></p>
+      <p>Email: <a href="mailto:pchichura@uchicago.edu">pchichura@uchicago.edu</a></p>
+      <p><a href="https://github.com/pchichura">GitHub</a> | <a href="https://linkedin.com/in/pchichura">LinkedIn</a></p>
     </section>
   </main>
 
