--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <main>
     <h2>Welcome</h2>
-    <p>I’m a researcher working at the intersection of astronomy and machine learning. Explore my research, publications, and projects to learn more.</p>
+    <p>I’m a researcher working at the intersection of astronomy and machine learning. This site is currently under construction.</p>
 
     <section id="contact">
       <h2>Contact</h2>
