initiate floating header

--- a/index.html
+++ b/index.html
@@ -8,27 +8,34 @@
 </head>
 <body>
   <header>
+  <div class="header-left">
+      <a href="mailto:pchichura@uchicago.edu" target="_blank">
+        <img src="images/icon-email.svg" alt="Email">
+      </a>
+      <a href="https://github.com/pchichur" target="_blank">
+        <img src="images/icon-github.svg" alt="GitHub">
+      </a>
+      <a href="https://linkedin.com/in/pchichura" target="_blank">
+        <img src="images/icon-linkedin.svg" alt="LinkedIn">
+      </a>
+    </div>
+
     <img src="images/profile.jpg" alt="My photo" class="profile-pic">
     <h1>Paul Chichura</h1>
     <p>Physicist • Astronomer • AI Enthusiast</p>
-    <nav>
+
+    <div class="header-right">
       <a href="index.html">Home</a>
       <a href="research.html">Research</a>
       <a href="cv.html">CV</a>
       <a href="publications.html">Publications</a>
       <a href="projects.html">Projects</a>
-    </nav>
+    </div>
   </header>
 
   <main>
     <h2>Welcome</h2>
     <p>I’m a researcher working at the intersection of astronomy and machine learning. This site is currently under construction.</p>
-
-    <section id="contact">
-      <h2>Contact</h2>
-      <p>Email: <a href="mailto:pchichura@uchicago.edu">pchichura@uchicago.edu</a></p>
-      <p><a href="https://github.com/pchichura">GitHub</a> | <a href="https://linkedin.com/in/pchichura">LinkedIn</a></p>
-    </section>
   </main>
 
   <footer>
