--- a/projects.html
+++ b/projects.html
@@ -8,14 +8,27 @@
 </head>
 <body>
   <header>
+  <div class="header-left">
+      <a href="mailto:pchichura@uchicago.edu" target="_blank">
+        <img src="images/icon-email.svg" alt="Email">
+      </a>
+      <a href="https://github.com/pchichur" target="_blank">
+        <img src="images/icon-github.svg" alt="GitHub">
+      </a>
+      <a href="https://linkedin.com/in/pchichura" target="_blank">
+        <img src="images/icon-linkedin.svg" alt="LinkedIn">
+      </a>
+    </div>
+
     <h1>Projects</h1>
-    <nav>
+
+    <div class="header-right">
       <a href="index.html">Home</a>
       <a href="research.html">Research</a>
       <a href="cv.html">CV</a>
       <a href="publications.html">Publications</a>
       <a href="projects.html">Projects</a>
-    </nav>
+    </div>
   </header>
 
   <main>
