--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-  <div class="header-left">
+  <header class="site-header">
+    <div class="header-left">
       <a href="mailto:pchichura@uchicago.edu" target="_blank">
         <img src="images/icon-email.svg" alt="Email">
       </a>
