clean up header, body, landing column layout

--- a/index.html
+++ b/index.html
@@ -12,31 +12,54 @@
       <a href="mailto:pchichura@uchicago.edu" target="_blank">
         <img src="images/icon-email.svg" alt="Email">
       </a>
-      <a href="https://github.com/pchichur" target="_blank">
-        <img src="images/icon-github.svg" alt="GitHub">
-      </a>
       <a href="https://linkedin.com/in/pchichura" target="_blank">
         <img src="images/icon-linkedin.svg" alt="LinkedIn">
       </a>
+      <a href="https://github.com/pchichura" target="_blank">
+        <img src="images/icon-github.svg" alt="GitHub">
+      </a>
+      <a href="https://orcid.org/0000-0002-5397-9035" target="_blank">
+        <img src="images/icon-orcid.svg" alt="ORCID">
+      </a>
+      <a href="https://scholar.google.com/citations?user=D033cUUAAAAJ&hl=en" target="_blank">
+        <img src="images/icon-googlescholar.svg" alt="Google Scholar">
+      </a>
     </div>
 
-    <img src="images/profile.jpg" alt="My photo" class="profile-pic">
-    <h1>Paul Chichura</h1>
-    <p>Physicist • Astronomer • AI Enthusiast</p>
+    <div class="header-center">
+      <h1>Paul Chichura</h1>
+      <p>Physics PhD | Astronomer | Data Analysis | ML/AI</p>
+    </div>
 
     <div class="header-right">
       <a href="index.html">Home</a>
       <a href="research.html">Research</a>
-      <a href="cv.html">CV</a>
       <a href="publications.html">Publications</a>
+      <a href="talks.html">Talks</a>
       <a href="projects.html">Projects</a>
+      <a href="cv.html">CV</a>
     </div>
   </header>
 
-  <main>
-    <h2>Welcome</h2>
-    <p>I’m a researcher working at the intersection of astronomy and machine learning. This site is currently under construction.</p>
-  </main>
+  <!-- Main content -->
+  <div class="content">
+    <div class="home-columns">
+      <!-- Left column: main text -->
+      <main class="main-column">
+        <h2>Welcome</h2>
+        <p>I’m a researcher working at the intersection of astronomy and machine learning. This site is currently under construction.</p>
+        <p>More details about my research, projects, and publications will appear here.</p>
+      </main>
+
+      <!-- Right column: sidebar -->
+      <aside class="sidebar">
+        <img src="images/profile.jpeg" alt="My photo" class="profile-pic-sidebar">
+        <h3>Contact</h3>
+        <p><strong>Email:</strong> <a href="mailto:pchichura@uchicago.edu">pchichura@uchicago.edu</a></p>
+        <p><strong>Offices:</strong> <br>SkAI Hub: Room 3566<br>UChicago: ERC 423<br>Chicago, IL</p>
+      </aside>
+    </div>
+  </div>
 
   <footer>
     <p>© 2025 Paul Chichura</p>
