--- a/projects.html
+++ b/projects.html
@@ -12,11 +12,17 @@
       <a href="mailto:pchichura@uchicago.edu" target="_blank">
         <img src="images/icon-email.svg" alt="Email">
       </a>
-      <a href="https://github.com/pchichur" target="_blank">
-        <img src="images/icon-github.svg" alt="GitHub">
-      </a>
       <a href="https://linkedin.com/in/pchichura" target="_blank">
         <img src="images/icon-linkedin.svg" alt="LinkedIn">
+      </a>
+      <a href="https://github.com/pchichura" target="_blank">
+        <img src="images/icon-github.svg" alt="GitHub">
+      </a>
+      <a href="https://orcid.org/0000-0002-5397-9035" target="_blank">
+        <img src="images/icon-orcid.svg" alt="ORCID">
+      </a>
+      <a href="https://scholar.google.com/citations?user=D033cUUAAAAJ&hl=en" target="_blank">
+        <img src="images/icon-googlescholar.svg" alt="Google Scholar">
       </a>
     </div>
 
@@ -25,18 +31,21 @@
     <div class="header-right">
       <a href="index.html">Home</a>
       <a href="research.html">Research</a>
-      <a href="cv.html">CV</a>
       <a href="publications.html">Publications</a>
+      <a href="talks.html">Talks</a>
       <a href="projects.html">Projects</a>
+      <a href="cv.html">CV</a>
     </div>
   </header>
 
-  <main>
-    <h2>Projects</h2>
-    <ul>
-      <li><strong>project1</strong> placeholder for projects</li>
-    </ul>
-  </main>
+  <div class="content">
+    <main>
+      <h2>Projects</h2>
+      <ul>
+        <li>Under construction.</li>
+      </ul>
+    </main>
+  </div>
 
   <footer>
     <p>© 2025 Paul Chichura</p>
