--- a/cv.html
+++ b/cv.html
@@ -7,27 +7,49 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
+  <header class="site-header">
+    <div class="header-left">
+      <a href="mailto:pchichura@uchicago.edu" target="_blank">
+        <img src="images/icon-email.svg" alt="Email">
+      </a>
+      <a href="https://linkedin.com/in/pchichura" target="_blank">
+        <img src="images/icon-linkedin.svg" alt="LinkedIn">
+      </a>
+      <a href="https://github.com/pchichura" target="_blank">
+        <img src="images/icon-github.svg" alt="GitHub">
+      </a>
+      <a href="https://orcid.org/0000-0002-5397-9035" target="_blank">
+        <img src="images/icon-orcid.svg" alt="ORCID">
+      </a>
+      <a href="https://scholar.google.com/citations?user=D033cUUAAAAJ&hl=en" target="_blank">
+        <img src="images/icon-googlescholar.svg" alt="Google Scholar">
+      </a>
+    </div>
+
     <h1>CV</h1>
-    <nav>
+
+    <div class="header-right">
       <a href="index.html">Home</a>
       <a href="research.html">Research</a>
-      <a href="cv.html">CV</a>
       <a href="publications.html">Publications</a>
+      <a href="talks.html">Talks</a>
       <a href="projects.html">Projects</a>
-    </nav>
+      <a href="cv.html">CV</a>
+    </div>
   </header>
 
-  <main>
-    <h2>Curriculum Vitae</h2>
-    <h3>Education</h3>
-    <ul>
-      <li>Ph.D. in Physics, University of Chicago</li>
-      <li>B.A. in Physics, University of Pennsylvania</li>
-    </ul>
-    <h3>Experience</h3>
-    <p>Postdoctoral Scholar at NSF-Simons AI Institute for the Sky (SkAI).</p>
-  </main>
+  <div class="content">
+    <main>
+      <h2>Curriculum Vitae</h2>
+      <h3>Education</h3>
+      <ul>
+        <li>Ph.D. in Physics, University of Chicago</li>
+        <li>B.A. in Physics, University of Pennsylvania</li>
+      </ul>
+      <h3>Experience</h3>
+      <p>Postdoctoral Scholar at NSF-Simons AI Institute for the Sky (SkAI).</p>
+    </main>
+  </div>
 
   <footer>
     <p>© 2025 Paul Chichura</p>
