--- a/talks.html
+++ b/talks.html
@@ -26,7 +26,7 @@
       </a>
     </div>
 
-    <h1>Research</h1>
+    <h1>Talks</h1>
 
     <div class="header-right">
       <a href="index.html">Home</a>
@@ -40,7 +40,7 @@
 
   <div class="content">
     <main>
-      <h2>Scientific Interests</h2>
+      <h2>Talks</h2>
       <p>Under construction.</p>
     </main>
   </div>
