--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <header class="site-header">
     <div class="header-left">
@@ -32,12 +33,20 @@
     </div>
 
     <div class="header-right">
-      <a href="index.html">Home</a>
-      <a href="research.html">Research</a>
-      <a href="publications.html">Publications</a>
-      <a href="talks.html">Talks</a>
-      <a href="projects.html">Projects</a>
-      <a href="cv.html">CV</a>
+      <!-- hamburger button (shown only on small screens) -->
+      <button class="menu-toggle" aria-controls="primary-navigation" aria-expanded="false" aria-label="Toggle menu">
+        <span class="hamburger" aria-hidden="true">☰</span>
+      </button>
+
+      <!-- the nav links -->
+      <nav id="primary-navigation" class="nav-links" role="navigation">
+        <a href="index.html">Home</a>
+        <a href="research.html">Research</a>
+        <a href="publications.html">Publications</a>
+        <a href="talks.html">Talks</a>
+        <a href="projects.html">Projects</a>
+        <a href="cv.html">CV</a>
+      </nav>
     </div>
   </header>
 
@@ -64,5 +73,18 @@
   <footer>
     <p>© 2025 Paul Chichura</p>
   </footer>
+
+  <script>
+    // Hamburger menu toggle
+    const menuToggle = document.querySelector('.menu-toggle');
+    const navLinks = document.getElementById('primary-navigation');
+
+    menuToggle.addEventListener('click', function() {
+      const expanded = this.getAttribute('aria-expanded') === 'true' || false;
+      this.setAttribute('aria-expanded', !expanded);
+      navLinks.classList.toggle('open');
+    });
+  </script>
+  
 </body>
 </html>
