reorganize socials into footer and sidebar

--- a/cv.html
+++ b/cv.html
@@ -8,25 +8,8 @@
 </head>
 <body>
   <header class="site-header">
-    <div class="header-left">
-      <a href="mailto:pchichura@uchicago.edu" target="_blank">
-        <img src="images/icon-email.svg" alt="Email">
-      </a>
-      <a href="https://linkedin.com/in/pchichura" target="_blank">
-        <img src="images/icon-linkedin.svg" alt="LinkedIn">
-      </a>
-      <a href="https://github.com/pchichura" target="_blank">
-        <img src="images/icon-github.svg" alt="GitHub">
-      </a>
-      <a href="https://orcid.org/0000-0002-5397-9035" target="_blank">
-        <img src="images/icon-orcid.svg" alt="ORCID">
-      </a>
-      <a href="https://scholar.google.com/citations?user=D033cUUAAAAJ&hl=en" target="_blank">
-        <img src="images/icon-googlescholar.svg" alt="Google Scholar">
-      </a>
-    </div>
 
-    <h1>CV</h1>
+    <h1>Paul Chichura</h1>
 
     <div class="header-right">
       <!-- hamburger button (shown only on small screens) -->
@@ -36,7 +19,7 @@
 
       <!-- the nav links -->
       <nav id="primary-navigation" class="nav-links" role="navigation">
-        <a href="index.html">Home</a>
+        <a href="index.html">About</a>
         <a href="research.html">Research</a>
         <a href="publications.html">Publications</a>
         <a href="talks.html">Talks</a>
@@ -60,7 +43,43 @@
   </div>
 
   <footer>
-    <p>© 2025 Paul Chichura</p>
+    <div class="site-footer">
+      <div class="footer-copyright">
+        © 2025 Paul Chichura
+      </div>
+      <div class="footer-email">
+        <a href="mailto:pchichura@uchicago.edu" target="_blank">
+          <img src="images/icon-email.svg" alt="Email">
+          <span>pchichura at uchicago dot edu</span>
+        </a>
+      </div>
+      <div class="footer-social-grid">
+        <div class="footer-item">
+          <a href="https://linkedin.com/in/pchichura" target="_blank">
+            <img src="images/icon-linkedin.svg" alt="LinkedIn">
+            <span>pchichura</span>
+          </a>
+        </div>
+        <div class="footer-item">
+          <a href="https://orcid.org/0000-0002-5397-9035" target="_blank">
+            <img src="images/icon-orcid.svg" alt="ORCID">
+            <span>0000-0002-5397-9035</span>
+          </a>
+        </div>
+        <div class="footer-item">
+          <a href="https://github.com/pchichura" target="_blank">
+            <img src="images/icon-github.svg" alt="GitHub">
+            <span>pchichura</span>
+          </a>
+        </div>
+        <div class="footer-item">
+          <a href="https://scholar.google.com/citations?user=D033cUUAAAAJ&hl=en" target="_blank">
+            <img src="images/icon-googlescholar.svg" alt="Google Scholar">
+            <span>Google Scholar</span>
+          </a>
+        </div>
+      </div>
+    </div>
   </footer>
 
   <script>
