--- a/index.html
+++ b/index.html
@@ -9,28 +9,8 @@
 
 <body>
   <header class="site-header">
-    <div class="header-left">
-      <a href="mailto:pchichura@uchicago.edu" target="_blank">
-        <img src="images/icon-email.svg" alt="Email">
-      </a>
-      <a href="https://linkedin.com/in/pchichura" target="_blank">
-        <img src="images/icon-linkedin.svg" alt="LinkedIn">
-      </a>
-      <a href="https://github.com/pchichura" target="_blank">
-        <img src="images/icon-github.svg" alt="GitHub">
-      </a>
-      <a href="https://orcid.org/0000-0002-5397-9035" target="_blank">
-        <img src="images/icon-orcid.svg" alt="ORCID">
-      </a>
-      <a href="https://scholar.google.com/citations?user=D033cUUAAAAJ&hl=en" target="_blank">
-        <img src="images/icon-googlescholar.svg" alt="Google Scholar">
-      </a>
-    </div>
 
-    <div class="header-center">
-      <h1>Paul Chichura</h1>
-      <p>Physics PhD | Astronomer | Data Analysis | ML/AI</p>
-    </div>
+    <h1>Paul Chichura</h1>
 
     <div class="header-right">
       <!-- hamburger button (shown only on small screens) -->
@@ -40,7 +20,7 @@
 
       <!-- the nav links -->
       <nav id="primary-navigation" class="nav-links" role="navigation">
-        <a href="index.html">Home</a>
+        <a href="index.html">About</a>
         <a href="research.html">Research</a>
         <a href="publications.html">Publications</a>
         <a href="talks.html">Talks</a>
@@ -63,15 +43,83 @@
       <!-- Right column: sidebar -->
       <aside class="sidebar">
         <img src="images/profile.jpeg" alt="My photo" class="profile-pic-sidebar">
-        <h3>Contact</h3>
-        <p><strong>Email:</strong> <a href="mailto:pchichura@uchicago.edu">pchichura@uchicago.edu</a></p>
-        <p><strong>Offices:</strong> <br>SkAI Hub: Room 3566<br>UChicago: ERC 423<br>Chicago, IL</p>
+        <h3>Paul Chichura</h3>
+        <p class="sidebar-location">
+          <span class="sidebar-location-icon">
+            <img src="images/icon-location.svg" alt="Location" class="sidebar-icon">
+          </span>
+          <span class="sidebar-location-text">
+            Chicago, IL<br>
+            SkAI Hub: Room 3566<br>
+            UChicago: ERC 423
+          </span>
+        </p>
+        <p>
+          <a href="mailto:pchichura@uchicago.edu" target="_blank">
+            <img src="images/icon-email.svg" alt="Email" class="sidebar-icon">
+            <span>pchichura at uchicago dot edu</span>
+          </a>
+        </p>
+        <p>
+          <a href="https://linkedin.com/in/pchichura" target="_blank">
+            <img src="images/icon-linkedin.svg" alt="LinkedIn" class="sidebar-icon">
+            <span>pchichura</span>
+          </a>
+        </p>
+        <p>
+          <a href="https://github.com/pchichura" target="_blank">
+            <img src="images/icon-github.svg" alt="GitHub" class="sidebar-icon">
+            <span>pchichura</span>
+          </a>
+        </p>
+        <p>
+          <a href="https://orcid.org/0000-0002-5397-9035" target="_blank">
+            <img src="images/icon-orcid.svg" alt="ORCID" class="sidebar-icon">
+            <span>0000-0002-5397-9035</span>
+          </a>
+        </p>
+        <p>
+          <a href="https://scholar.google.com/citations?user=D033cUUAAAAJ&hl=en" target="_blank">
+            <img src="images/icon-googlescholar.svg" alt="Google Scholar" class="sidebar-icon">
+            <span>Google Scholar</span>
+          </a>
+        </p>
       </aside>
     </div>
   </div>
 
   <footer>
-    <p>© 2025 Paul Chichura</p>
+    <div class="site-footer">
+      <div class="footer-copyright">
+        © 2025 Paul Chichura
+      </div>
+      <div class="footer-social-grid">
+        <div class="footer-item">
+          <a href="https://linkedin.com/in/pchichura" target="_blank">
+            <img src="images/icon-linkedin.svg" alt="LinkedIn">
+            <span>pchichura</span>
+          </a>
+        </div>
+        <div class="footer-item">
+          <a href="https://orcid.org/0000-0002-5397-9035" target="_blank">
+            <img src="images/icon-orcid.svg" alt="ORCID">
+            <span>0000-0002-5397-9035</span>
+          </a>
+        </div>
+        <div class="footer-item">
+          <a href="https://github.com/pchichura" target="_blank">
+            <img src="images/icon-github.svg" alt="GitHub">
+            <span>pchichura</span>
+          </a>
+        </div>
+        <div class="footer-item">
+          <a href="https://scholar.google.com/citations?user=D033cUUAAAAJ&hl=en" target="_blank">
+            <img src="images/icon-googlescholar.svg" alt="Google Scholar">
+            <span>Google Scholar</span>
+          </a>
+        </div>
+      </div>
+    </div>
   </footer>
 
   <script>
