tweak about text

--- a/index.html
+++ b/index.html
@@ -45,21 +45,24 @@
           <a href="https://astrophysics.uchicago.edu/people/profile/alex-drlica-wagner/" target="_blank" rel="noopener noreferrer">Alex Drlica-Wagner</a>.
           I earned my PhD in Physics from UChicago in 2025, advised by
           <a href="https://kavlicosmo.uchicago.edu/people/profile/thomas-crawford/" target="_blank" rel="noopener noreferrer">Thomas Crawford</a>,
-          and previously completed a BS in Physics (minor in Mathematics) and an MS in Physics and Astronomy at the University of Pennsylvania, advised by
+          and I previously completed a BA in Physics (minor in Mathematics) and an MS in Physics and Astronomy at the University of Pennsylvania, advised by
           <a href="https://live-sas-physics.pantheon.sas.upenn.edu/people/standing-faculty/james-aguirre" target="_blank" rel="noopener noreferrer">James Aguirre</a>.
         </p>
 
         <p>
-          My research focuses on developing AI-driven methods to optimize telescope scheduling, i.e. how telescopes decide what to look at and when.
+          I specialize in data analysis, machine learning, and complex systems modeling.
+          My current research focuses on developing AI-driven methods to optimize telescope scheduling, i.e. automating how telescopes decide what to look at and when.
           Previously, I integrated machine learning models into telescope control systems to improve pointing accuracy and explored new applications of millimeter-wave survey data from the South Pole Telescope.
           Broadly, I’m interested in time-domain and variable sources, telescope operations, and the role of AI in advancing survey design and data analysis.
         </p>
 
         <p>
           I grew up near Scranton, Pennsylvania, where I spent much of my time in mock trial and theater.
-          In college, I continued performing as president of
-          <a href="https://disneyacappella.com" target="_blank" rel="noopener noreferrer">Disney A Cappella</a>.
-          These days, I enjoy trying new food, renovating my bathroom, and (very slowly) learning Mandarin.
+          In college and grad school, I continued performing with
+          <a href="https://disneyacappella.com" target="_blank" rel="noopener noreferrer">Disney A Cappella</a>
+          and 
+          <a href="https://www.instagram.com/uchicagorunforcover/?hl=en" target="_blank" rel="noopener noreferrer">Run For Cover</a>.
+          Nowadays, I enjoy trying new food, renovating my bathroom, and (very slowly) learning Mandarin.
         </p>
       </main>
 
