upload publications list

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h2>About</h2>
         <p>
           I am a postdoctoral scholar at the
-          <a href="https://skai-institute.org" target="_blank" rel="noopener noreferrer">NSF–Simons AI Institute for the Sky (SkAI)</a>,
+          <a href="https://skai-institute.org" target="_blank" rel="noopener noreferrer">NSF-Simons AI Institute for the Sky (SkAI)</a>,
           based at the University of Chicago in the
           <a href="https://astrophysics.uchicago.edu" target="_blank" rel="noopener noreferrer">Department of Astronomy and Astrophysics</a>
           working with
