--- a/publications.html
+++ b/publications.html
@@ -32,8 +32,20 @@
   <div class="content">
     <main>
       <h2>Publications</h2>
+      <p>You can download a PDF of my full publications list: <a href="files/Publications_List.pdf" target="_blank" rel="noopener noreferrer" download>Publications_List (PDF)</a>. As of October 2025, I have authored 23 refereed publications, including two first-author publications. These publications have received 545 citations (H-Index: 13) according to NASA ADS.</p>
+      <p>Here are NASA ADS libraries of my first-author and Nth-author publications:</p>
       <ul>
-        <li>Under construction.</li>
+        <li><a href="https://ui.adsabs.harvard.edu/user/libraries/GG_Ymc0vTeyQtICP5DW0Kw" target="_blank" rel="noopener noreferrer">NASA ADS: first-author publications</a></li>
+        <li><a href="https://ui.adsabs.harvard.edu/user/libraries/7MKv9U28Qv2t_bUh33VR5Q" target="_blank" rel="noopener noreferrer">NASA ADS: Nth-author publications</a></li>
+      </ul>
+
+      <p>Additionally, here are pre-defined queries through other services:</p>
+      <ul>
+        <li><a href="https://orcid.org/0000-0002-5397-9035" target="_blank" rel="noopener noreferrer">ORCID (0000-0002-5397-9035)</a></li>
+        <li><a href="https://scholar.google.com/citations?user=D033cUUAAAAJ&hl=en" target="_blank" rel="noopener noreferrer">Google Scholar</a></li>
+        <li><a href="https://arxiv.org/search/?query=Chichura&searchtype=author&abstracts=show&order=-announced_date_first&size=50" target="_blank" rel="noopener noreferrer">arXiv</a></li>
+        <li><a href="https://ui.adsabs.harvard.edu/search/fq=%7B!type%3Daqp%20v%3D%24fq_database%7D&fq_database=(database%3Aastronomy%20OR%20database%3Aphysics)&q=%20author%3A%22Chichura%2C%20P%22&sort=date%20desc%2C%20bibcode%20desc&p_=0" target="_blank" rel="noopener noreferrer">NASA ADS</a></li>
+        <li><a href="https://inspirehep.net/authors/1709630" target="_blank" rel="noopener noreferrer">INSPIRE</a></li>
       </ul>
     </main>
   </div>
