fix publist page formatting

--- a/publications.html
+++ b/publications.html
@@ -32,7 +32,11 @@
   <div class="content">
     <main>
       <h2>Publications</h2>
-      <p>You can download a PDF of my full publications list: <a href="files/Publications_List.pdf" target="_blank" rel="noopener noreferrer" download>Publications_List (PDF)</a>. As of October 2025, I have authored 23 refereed publications, including two first-author publications. These publications have received 545 citations (H-Index: 13) according to NASA ADS.</p>
+      <p>
+        You can view my full publications list as a PDF
+        <a href="files/Publications_List.pdf" target="_blank" rel="noopener noreferrer">here</a>.
+        As of October 2025, I have authored 23 refereed publications, including two first-author publications. These publications have received 545 citations (H-Index: 13) according to NASA ADS.
+      </p>
       <p>Here are NASA ADS libraries of my first-author and Nth-author publications:</p>
       <ul>
         <li><a href="https://ui.adsabs.harvard.edu/user/libraries/GG_Ymc0vTeyQtICP5DW0Kw" target="_blank" rel="noopener noreferrer">NASA ADS: first-author publications</a></li>
