add link to dissertation

--- a/publications.html
+++ b/publications.html
@@ -32,10 +32,12 @@
   <div class="content">
     <main>
       <h2>Publications</h2>
+      <p>As of October 2025, I have authored 23 refereed publications, including two first-author publications. These publications have received 545 citations (H-Index: 13) according to NASA ADS.</p>
       <p>
         You can view my full publications list as a PDF
         <a href="files/Publications_List.pdf" target="_blank" rel="noopener noreferrer">here</a>.
-        As of October 2025, I have authored 23 refereed publications, including two first-author publications. These publications have received 545 citations (H-Index: 13) according to NASA ADS.
+        You can access my PhD dissertation
+        <a href="https://doi.org/10.6082/uchicago.15880" target="_blank" rel="noopener noreferrer">here</a>.
       </p>
       <p>Here are NASA ADS libraries of my first-author and Nth-author publications:</p>
       <ul>
@@ -43,7 +45,7 @@
         <li><a href="https://ui.adsabs.harvard.edu/user/libraries/7MKv9U28Qv2t_bUh33VR5Q" target="_blank" rel="noopener noreferrer">NASA ADS: Nth-author publications</a></li>
       </ul>
 
-      <p>Additionally, here are pre-defined queries through other services:</p>
+      <p>Additionally, here are pre-defined queries through other reference services:</p>
       <ul>
         <li><a href="https://orcid.org/0000-0002-5397-9035" target="_blank" rel="noopener noreferrer">ORCID (0000-0002-5397-9035)</a></li>
         <li><a href="https://scholar.google.com/citations?user=D033cUUAAAAJ&hl=en" target="_blank" rel="noopener noreferrer">Google Scholar</a></li>
