reorg publications layout

--- a/publications.html
+++ b/publications.html
@@ -32,13 +32,18 @@
   <div class="content">
     <main>
       <h2>Publications</h2>
-      <p>As of October 2025, I have authored 23 refereed publications, including two first-author publications. These publications have received 545 citations (H-Index: 13) according to NASA ADS.</p>
+      
       <p>
-        You can view my full publications list as a PDF
-        <a href="files/Publications_List.pdf" target="_blank" rel="noopener noreferrer">here</a>.
-        You can access my PhD dissertation
-        <a href="https://doi.org/10.6082/uchicago.15880" target="_blank" rel="noopener noreferrer">here</a>.
+        As of October 2025, I have authored 23 refereed publications, including two first-author publications.
+        These publications have received 545 citations (H-Index: 13) according to NASA ADS.
       </p>
+      
+      <p>
+        Click
+        <a href="files/Publications_List.pdf" target="_blank" rel="noopener noreferrer">here</a>
+        to download a PDF of all my publications.
+      </p>
+
       <p>Here are NASA ADS libraries of my first-author and Nth-author publications:</p>
       <ul>
         <li><a href="https://ui.adsabs.harvard.edu/public-libraries/GG_Ymc0vTeyQtICP5DW0Kw" target="_blank" rel="noopener noreferrer">NASA ADS: first-author publications</a></li>
@@ -53,6 +58,13 @@
         <li><a href="https://ui.adsabs.harvard.edu/search/fq=%7B!type%3Daqp%20v%3D%24fq_database%7D&fq_database=(database%3Aastronomy%20OR%20database%3Aphysics)&q=%20author%3A%22Chichura%2C%20P%22&sort=date%20desc%2C%20bibcode%20desc&p_=0" target="_blank" rel="noopener noreferrer">NASA ADS</a></li>
         <li><a href="https://inspirehep.net/authors/1709630" target="_blank" rel="noopener noreferrer">INSPIRE</a></li>
       </ul>
+
+      <p>
+        Click
+        <a href="https://doi.org/10.6082/uchicago.15880" target="_blank" rel="noopener noreferrer">here</a>
+        to access my PhD dissertation.
+      </p>
+
     </main>
   </div>
 
