--- a/cv.html
+++ b/cv.html
@@ -32,13 +32,13 @@
   <div class="content">
     <main>
       <h2>Curriculum Vitae</h2>
-      <h3>Education</h3>
+      
+      <p>Click to access the following PDFs:</p>
       <ul>
-        <li>Ph.D. in Physics, University of Chicago</li>
-        <li>B.A. in Physics, University of Pennsylvania</li>
+        <li><a href="files/CV.pdf" target="_blank" rel="noopener noreferrer">Academic CV</a> (last updated August 2025)</li>
+        <li><a href="files/Resume.pdf" target="_blank" rel="noopener noreferrer">Technical Resume</a> (last updated July 2025)</li>
       </ul>
-      <h3>Experience</h3>
-      <p>Postdoctoral Scholar at NSF-Simons AI Institute for the Sky (SkAI).</p>
+
     </main>
   </div>
 
