add talk content

--- a/talks.html
+++ b/talks.html
@@ -31,8 +31,135 @@
 
   <div class="content">
     <main>
-      <h2>Talks</h2>
-      <p>Under construction.</p>
+      <h2>Talks and Public Presentations</h2>
+
+      <p>View resources and information from my recent talks and presentations, some of which have been recorded.</p>
+
+      <section class="talk-year">
+        <h3>2025</h3>
+
+        <article class="talk">
+          <h4 class="talk-title">Expanding South Pole Telescope Science: Asteroids and Black Holes</h4>
+          <div class="talk-meta"><em>Thesis defense | University of Chicago | 18 Jul 2025</em></div>
+          <div class="talk-links">
+            <a href="https://drive.google.com/file/d/1ePjUpzanHM23vq6ILLhjCD0kEn8uoQ_I/view?usp=share_link" class="talk-link" target="_blank" rel="noopener noreferrer">Slides</a>
+            <a href="https://doi.org/10.6082/uchicago.15880" class="talk-link" target="_blank" rel="noopener noreferrer">Dissertation</a>
+          </div>
+        </article>
+
+        <article class="talk">
+          <h4 class="talk-title">Pointing the South Pole Telescope with Machine Learning</h4>
+          <div class="talk-meta"><em>Contributed talk | USNC-URSI National Radio Science Meeting (NRSM) | University of Colorado | 7-10 Jan 2025</em></div>
+          <div class="talk-links">
+            <a href="https://drive.google.com/file/d/1yrXx1A6Tm80wTGsS7ONhWexR9kWMOipy/view?usp=share_link" class="talk-link" target="_blank" rel="noopener noreferrer">Slides</a>
+            <a href="https://www.nrsmboulder.org/2025/view_paper.php?PaperNum=1251#top" class="talk-link" target="_blank" rel="noopener noreferrer">Conference</a>
+            <a href="https://doi.org/10.23919/USNC-URSINRSM66067.2025.10907227" class="talk-link" target="_blank" rel="noopener noreferrer">Abstract</a>
+          </div>
+        </article>
+
+      </section>
+
+      <section class="talk-year">
+        <h3>2024</h3>
+
+        <article class="talk">
+          <h4 class="talk-title">Pointing Model Predictions with Machine Learning for the South Pole Telescope</h4>
+          <div class="talk-meta"><em>Poster | Schmidt AI+Science Summer School | University of Chicago | 15-19 Jul 2024</em></div>
+          <div class="talk-links">
+            <a href="https://drive.google.com/file/d/1AXbo1EzeT2xu5U1nUnS4ufJ_zhiIAoWR/view?usp=share_link" class="talk-link" target="_blank" rel="noopener noreferrer">Poster</a>
+            <a href="https://datascience.uchicago.edu/events/ai-science-summer-school-2024/" class="talk-link" target="_blank" rel="noopener noreferrer">Conference</a>
+          </div>
+        </article>
+
+        <article class="talk">
+          <h4 class="talk-title">Novel Science with the South Pole Telescope: Asteroids and Black Holes</h4>
+          <div class="talk-meta"><em>Award talk | Nathan Sugarman Awards | University of Chicago | 21 May 2024</em></div>
+          <div class="talk-links">
+            <a href="https://drive.google.com/file/d/1ZWKVB8jmdoQzMVqccUAjE9GcQR5AJ7OB/view?usp=share_link" class="talk-link" target="_blank" rel="noopener noreferrer">Slides</a>
+            <a href="https://uchicago.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=f132d4fb-905c-43b3-a4da-b177010d1a71&start=0" class="talk-link" target="_blank" rel="noopener noreferrer">Video</a>
+            <a href="https://efi.uchicago.edu/the-efi/awards/previous-nathan-sugarman-awards/" class="talk-link" target="_blank" rel="noopener noreferrer">Award Page</a>
+          </div>
+        </article>
+
+      </section>
+
+      <section class="talk-year">
+        <h3>2023</h3>
+
+        <article class="talk">
+          <h4 class="talk-title">Pointing Model Predictions for the South Pole Telescope</h4>
+          <div class="talk-meta"><em>Poster | Schmidt AI+Science Summer School | University of Chicago | 17-21 Jul 2023</em></div>
+          <div class="talk-links">
+            <a href="https://drive.google.com/file/d/18JXSBJM3bW7kS5Y6Y1xgywnfd0JWtQN-/view?usp=share_link" class="talk-link" target="_blank" rel="noopener noreferrer">Poster</a>
+            <a href="https://datascience.uchicago.edu/events/ai-science-summer-school-2023/" class="talk-link" target="_blank" rel="noopener noreferrer">Conference</a>
+          </div>
+        </article>
+
+        <article class="talk">
+          <h4 class="talk-title">Asteroid Measurements at Millimeter Wavelengths with the South Pole Telescope</h4>
+          <div class="talk-meta"><em>Contributed talk | The Transient and Variable Universe | University of Illinois Urbana-Champaign | 20-22 Jun 2023</em></div>
+          <div class="talk-links">
+            <a href="https://drive.google.com/file/d/1hLbLB6yY2xN6jAlfVgbgaU3fRhXCdFIA/view?usp=share_link" class="talk-link" target="_blank" rel="noopener noreferrer">Slides</a>
+            <a href="https://mediaspace.illinois.edu/media/t/1_02nicchf" class="talk-link" target="_blank" rel="noopener noreferrer">Video</a>
+            <a href="https://publish.illinois.edu/transient-variable-2023/" class="talk-link" target="_blank" rel="noopener noreferrer">Conference</a>
+          </div>
+        </article>
+
+      </section>
+
+      <section class="talk-year">
+        <h3>2022</h3>
+
+        <article class="talk">
+          <h4 class="talk-title">Solar System Science with CMB-S4</h4>
+          <div class="talk-meta"><em>Invited seminar | Center for AstroPhysical Surveys (CAPS) Seminar | University of Illinois Urbana-Champaign | 18 Oct 2022</em></div>
+          <div class="talk-links">
+            <a href="https://drive.google.com/file/d/1W1ue9D3QXS8fpaSx7ea-BYiN5rTEjK5H/view?usp=share_link" class="talk-link" target="_blank" rel="noopener noreferrer">Slides</a>
+            <a href="https://youtu.be/tsIunFeQNWU?si=pekVT7AwGiov7640" class="talk-link" target="_blank" rel="noopener noreferrer">Video</a>
+            <a href="https://caps.ncsa.illinois.edu/home/talks/" class="talk-link" target="_blank" rel="noopener noreferrer">Seminar Page</a>
+          </div>
+        </article>
+
+        <article class="talk">
+          <h4 class="talk-title">Asteroids and CMB-S4</h4>
+          <div class="talk-meta"><em>Invited talk | CMB-S4 Astrophysics Workshop | University of Illinois Urbana-Champaign (remote) | 6-7 Jul 2022</em></div>
+          <div class="talk-links">
+            <a href="https://drive.google.com/file/d/1D6yyh1SdqeCbOzadnJ3C3HWMvdG30dqq/view?usp=share_link" class="talk-link" target="_blank" rel="noopener noreferrer">Slides</a>
+            <a href="https://publish.illinois.edu/cmbs4-2022/" class="talk-link" target="_blank" rel="noopener noreferrer">Event Page</a>
+          </div>
+        </article>
+
+      </section>
+
+      <section class="talk-year">
+        <h3>2021</h3>
+
+        <article class="talk">
+          <h4 class="talk-title">Measuring the Millimeter-Wavelength Flux of Asteroids with the South Pole Telescope</h4>
+          <div class="talk-meta"><em>Poster | 238th Meeting of the American Astronomical Society (AAS) | virtual | 7-9 Jun 2021</em></div>
+          <div class="talk-links">
+            <a href="https://aas238-aas.ipostersessions.com/default.aspx?s=73-1B-F5-95-A6-39-84-DF-94-B0-A6-B8-72-33-58-6B&guestview=true" class="talk-link" target="_blank" rel="noopener noreferrer">iPoster</a>
+            <a href="https://aas.org/meetings/aas238" class="talk-link" target="_blank" rel="noopener noreferrer">Conference</a>
+            <a href="https://ui.adsabs.harvard.edu/abs/2021AAS...23831601C/abstract" class="talk-link" target="_blank" rel="noopener noreferrer">Citation</a>
+          </div>
+        </article>
+
+      </section>
+
+      <section class="talk-year">
+        <h3>2018</h3>
+
+        <article class="talk">
+          <h4 class="talk-title">Polarized Power Spectra from HERA-19 Commissioning Data: Effect of Calibration Techniques</h4>
+          <div class="talk-meta"><em>Poster | 231st Meeting of the American Astronomical Society (AAS) | Washington, DC | 8-12 Jan 2018</em></div>
+          <div class="talk-links">
+            <a href="https://aas.org/meetings/aas231" class="talk-link" target="_blank" rel="noopener noreferrer">Conference</a>
+            <a href="https://ui.adsabs.harvard.edu/abs/2018AAS...23115034C/abstract" class="talk-link" target="_blank" rel="noopener noreferrer">Citation</a>
+          </div>
+        </article>
+
+      </section>
+
     </main>
   </div>
 
